--- a/html/login.html
+++ b/html/login.html
@@ -38,7 +38,7 @@
     <script src="../js/jquery-3.2.1.js"></script>
     <script>
         $(() => {
-            $("#username").val("13178806321");
+            //$("#username").val("13178806321");
 
 
 
